syntax = "proto3";

package s12.example;

option go_package = ".;main";

service ExampleService {
    rpc ExampleOne(ExampleOneRequest) returns (ExampleOneResponse);
    rpc ExampleTwo(ExampleTwoRequest) returns (ExampleTwoResponse);
    rpc AlwaysError(ExampleOneRequest) returns (ExampleOneResponse);
    rpc StreamingExample(StreamRequest) returns (stream ServerTime);
}

message ExampleOneRequest {
    string msg = 1;
}

message ExampleOneResponse {
    string id = 1;
    string msg = 2;
}

message ExampleTwoRequest {
  int64 id = 1;
}

message ExampleTwoResponse {
  int64 id = 1;
  string msg = 2;
}

message StreamRequest {
  bool error = 1;
}

message ServerTime {
  string time = 1;
}
